missing last section --add later

--- a/LEC/2025-09-03.md
+++ b/LEC/2025-09-03.md
@@ -1,3 +1,12 @@
+# Table of Contents
+<!-- vim-markdown-toc GFM -->
+
+* [Interlude](#interlude)
+* [Last Time](#last-time)
+* [How to Write Natural Numbers in $\mathbb{Z}_2$](#how-to-write-natural-numbers-in-mathbbz_2)
+* [Mathematical Logic and Grammar](#mathematical-logic-and-grammar)
+
+<!-- vim-markdown-toc -->
 # Interlude 
 Classes meet at Sondheim 111
 TA Avail Tues/Thurs 10:00AM - 11:00AM
@@ -9,5 +18,67 @@ TA Avail Tues/Thurs 10:00AM - 11:00AM
     - Rules (Axioms) 
 * Set Theory (Naive)
     - A collection of well defined objects.
-    - 
+    - Sets are defined by capital letters
+        - Elements of a set are defn. by lower-case letters
+    - $a \in A$ or $b \not\in A$
+    - Two ways of writing a set: 
+        - $\{\text{list all objects...} \}$
+        - $A=\{xx|yy\} \leftrightarrow A=\{xx:yy\}$
+            - all x's where y is satisfied
 
+In the usual number system: 
+* $\mathbb{R}$ the set of all real numbers
+* $\mathbb{Q}$ the set of all rational numbers $\{ \dfrac{m}{n} | m,n \in Z\}$
+* $\mathbb{Z}$ the set of all positive integers (neq 0) $\{0, 1, -1, 2, -2, ...\}$
+* $\mathbb{N}$ the set of all integers $\{1 , 2, 3, 4, ...\}$
+
+In $\mathbb{R}$ we add, multiply, divide, and subtract in the usual way.
+    - Ex. 1+1 = 2
+
+An *unusual* number system: 
+* In this system, there are two objects: 0, 1
+
+Introduce Addition In the Following Way:
+
+| + | 1 | 0 |
+|---|---|---|
+| 1 | 0 | 1 |
+| 0 | 1 | 0 |
+
+`Note: 1+1 = 0` 
+
+How to create this system: 
+* Start w/ $\mathbb{Z} = \{0, 1, -1, 2, -2, ...\}$
+* Divide any integer by 2 and look at the **reminder**:
+    - 3 % 2 =  1 
+    - 6 % 2 = 0 
+    - -7 % 2 = 1
+        * Observe the remainders are always either 0 || 1 
+        * Collect these and form a set
+            * $\mathbb{Z}_2 = \{0,1\}$ (base is 2)
+
+How to add two objects in $\mathbb{Z}_2$
+* Call these numbers $a$ and $b$ add them in the usual way; divide this sum by 2 and return the remainder 
+
+The remainder: this last number (remainder) is the sum of $a$ and $b$ in $\mathbb{Z}_2$
+
+Ex. 
+* $0+1 = 1 \% 2 = 1$
+* $1+1 = 2 \% 2 = 0$
+
+Addition Table for Z_3
+
+| + | 0 | 1 | 2 |
+|---|---|---|---|
+| 0 | 0 | 1 | 2 |
+| 1 | 1 | 2 | 0 |
+| 2 | 2 | 0 | 1 |
+
+# How to Write Natural Numbers in $\mathbb{Z}_2$
+$13 = 1E1 + 3E0$ 
+
+In terms of $\mathbb{Z_2}$:
+* $13 = 8 + 4 + 1 = 1(2^3)+ 1(2^2) + 0(2^1) + 1(2^0)$
+
+# Mathematical Logic and Grammar 
+* Say not "a number squared is 4" rather say $\exists x \in \mathbb{R} \rightarrow x^2 = 4$
