--- a/HW/005/005.tex
+++ b/HW/005/005.tex
@@ -42,7 +42,7 @@ Show $\forall n \in \mathbb{N}, 1^3+2^3+...+n^3 = \Biggr[ \dfrac{n(n+1)}{2} \Big
 \begin{itemize}
     \item Let $P(n): 1^3+2^3+...+n^3 = \Biggr[ \dfrac{n(n+1)}{2} \Biggl] ^2$
     \item Observe $P(1): 1^3 = \Biggr[ \dfrac{(1)((1)+1)}{2} \Biggl] ^2 = 1$ therefore $P(1)$ is true
-    \item Suppose $P(k): 1^3+2^3+...+k^3 = \Biggr[ \dfrac{k(k+1)}{2} \Biggl] ^2$
+    \item Suppose $k \in \mathbb{N} P(k): 1^3+2^3+...+k^3 = \Biggr[ \dfrac{k(k+1)}{2} \Biggl] ^2$
     \item Observe $\Biggr[ \dfrac{k(k+1)}{2} \Biggl] ^2 = \Biggr[ \dfrac{k^4+2k^3+k^2}{2} \Biggl]$
     \item Observe $\Biggr[ \dfrac{(k+1)^4+2(k+1)^3+(k+1)^2}{2} \Biggl] = \Biggr[ \dfrac{k^4+6k^3+13k^2+12k+4}{2} \Biggl]$
     \item Add $(k+1)^3$ to both sides of $1^3+2^3+...+k^3 = \Biggr[ \dfrac{k(k+1)}{2} \Biggl] ^2$
@@ -61,7 +61,7 @@ Show $\forall n \in \mathbb{N}, 1+4+7+...+(3n-2) = \dfrac{3n^2-n}{2}$
 \begin{itemize}
     \item Let $P(n): 1+4+7+...+(3n-2) = \dfrac{3n^2-n}{2}$
     \item Observe $P(1): 1 = \dfrac{3(1)^2-(1)}{2} = 1$ therefore $P(1)$ is true
-    \item Suppose $P(k): 1+4+7+...+(3k-2) = \dfrac{3k^2-k}{2}$
+    \item Suppose $k \in \mathbb{k} P(k): 1+4+7+...+(3k-2) = \dfrac{3k^2-k}{2}$
     \item Add $(3k+1)$ to both sides of $1+4+7+...+(3k-2) = \dfrac{3k^2-k}{2}$
     \item Thus $1+4+7+...+(3k-2) + (3k+1) = \dfrac{3k^2-k}{2} + (3k+1)$
     \item Observe $\dfrac{3(k+1)^2-(k+1)}{2} = \dfrac{3k^2+5k+2}{2}$
@@ -77,7 +77,7 @@ Show $\forall n \in \mathbb{N}, n<2^n$
 \begin{itemize}
     \item Let $P(n):n<2^n$
     \item Observe $P(1):1 < 2^1$ thus, $P(1)$ is true
-    \item Suppose $P(k): k<2^k$
+    \item Suppose $k \in \mathbb{N} P(k): k<2^k$
     \item Add $1$ to both sides of $k<2^k$ to get $k+1<2^k+1$
     \item Observe $2^{k+1} = 2^k*2$
     \item Clearly $2^k+1 < 2^{k+1}$
@@ -91,7 +91,7 @@ Show $\forall n \in \mathbb{N}, 6|(n^3+5n)$
 \begin{itemize}
     \item Let $P(n): 6|(n^3+5n)$
     \item Let $P(1): 6|(1^3+5n) \equiv 6|(1+5) \equiv 6|6$ therefore $P(1)$ is true
-    \item Suppose $P(k):(k^3+5k) \implies \exists c \in \mathbb{N} \ni 6c=k^3+5k$
+    \item Suppose $k \in \mathbb{N} P(k):(k^3+5k) \implies \exists c \in \mathbb{N} \ni 6c=k^3+5k$
     \item Observe $(k+1)^3 + 5(k+1) = k^3+3k^2+8k+5$
     \item Add $3k^2 + 3k + 6$ to both sides of $6c=k^3+5k$
     \item Thus $6c+3k^2+3k+6=k^3+3k^2+8k+6$
